Ready to deploy

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,11 @@
 body{
     font-family: sans-serif;
 }
+
+
+
+.active {
+    --tw-text-opacity: 1;
+    color: rgb(249 115 22 / var(--tw-text-opacity));
+    border-bottom: rgb(249 115 22 / var(--tw-text-opacity));
+}
